# gov-il-mcp

./: .pre-commit-config.yaml  README.md  pyproject.toml
